update DOM.js, README, index.html and main.js

--- a/README
+++ b/README
@@ -36,7 +36,14 @@ Organisation Projet
 │   │       └─ 📜Visibilté.js
 │   │
 │   ├─ 📂StakingMode
-│   │   └─ 📜Staking.js
+│   │   │
+│   │   ├─  📂CalculFunctionsStaking
+|   |   │    ├─ 📜APR.js      
+│   │   │    └─ 📜APY.js      
+│   │   │   
+│   │   └─  📂FunctionResetStaking
+│   │        └─ 📜APY.js      
+│   │
 │   │
 │   ├─ 📂NFTMode
 │   │   └─ 📜NFT.js
